# Timer

./: CMakeLists.txt  LogRepository.cpp  LogRepository.h  LogRepositoryTest.cpp  Pomodoro.cpp  Pomodoro.h  PomodoroWidget.cpp  PomodoroWidget.h  PomodoroWidget.ui  README.md  Timer.pro  logrepositorytest.cpp  main.cpp  mainwindow.ui  pomodorotest.cpp  sandboxTest.cpp
Timer/: CMakeLists.txt  Category.cpp  Category.h  LogRepository.cpp  LogRepository.h  Task.h  TaskLog.cpp  TaskLog.h  TaskRecorder.cpp  TaskRecorder.h  TaskWidget.cpp  TaskWidget.h  TaskWindow.cpp  TaskWindow.h  main.cpp
TimerTutorial/: CMakeLists.txt  Log.cpp  Log.h  LogRepository.cpp  Pomodoro.h  PomodoroWidget.ui  main.cpp  mainwindow.ui
tests/: pomodorotest.cpp  sandboxTest.cpp
